@@ -2,7 +2,6 @@ TODO list for ph-scale (HTML5)
 
 HIGH
 - PHMeterNode
-- fix SolutionModel.drainSolution
 
 MEDIUM
 - limit dropperFluid.bottom to solution.top
