@@ -97,14 +97,18 @@ define( function( require ) {
       }
     },
 
-    // private: Drain solution from the output faucet
+    // private: Drain solution from the output faucet. Equal percentages of solvent and solute are drained.
     drainSolution: function( deltaSeconds ) {
-      var deltaVolume = this.drainFaucet.flowRateProperty.get() * deltaSeconds;
-      if ( deltaVolume > 0 ) {
-        //TODO this is wrong!
-        this.solution.soluteVolumeProperty.set( Math.max( 0, this.solution.soluteVolumeProperty.get() - deltaVolume/2 ) );
-        this.solution.solventVolumeProperty.set( Math.max( 0, this.solution.solventVolumeProperty.get() - deltaVolume/2 ) );
+      if ( this.solution.volumeProperty.get() > 0 ) {
+        var deltaVolume = Math.min( this.drainFaucet.flowRateProperty.get() * deltaSeconds, this.solution.volumeProperty.get() );
+        this.drainPercentage( deltaVolume, this.solution.solventVolumeProperty, this.solution.volumeProperty );
+        this.drainPercentage( deltaVolume, this.solution.soluteVolumeProperty, this.solution.volumeProperty );
       }
+    },
+
+    // private: Drains a percentage of some component of that makes up the total volume.
+    drainPercentage: function( deltaVolume, componentVolumeProperty, totalVolumeProperty ) {
+      componentVolumeProperty.set( Math.max( 0, componentVolumeProperty.get() - ( deltaVolume * componentVolumeProperty.get() / totalVolumeProperty.get() ) ) );
     }
   };
 
